Add GET all product and GET orphacodes for linearization product
