# api/swagger/swagger.yaml
@@ -1034,6 +1034,52 @@ paths:
         default:
           description: Unknown internal error
       x-openapi-router-controller: api.controllers.rd_genes
+  /orphadata/details/rd-medical-specialties:
+    get:
+      tags:
+      - Medical specialties of rare diseases
+      summary: Get medical specialties associated with all ORPHAcodes.
+      description: The result is a collection of information relative to all ORPHAcodes and their medical specialy.
+      operationId: query_linearization_base
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/product7_array'
+        "403":
+          description: Access denied
+        "404":
+          description: Queried disorder not found
+        "500":
+          description: Unknown internal error
+        default:
+          description: Unknown internal error
+      x-openapi-router-controller: api.controllers.rd_medical_specialties
+  /orphadata/details/rd-medical-specialties/orphacodes:
+    get:
+      tags:
+      - Medical specialties of rare diseases
+      summary: Get the list of ORPHAcodes and their preferred term.
+      description: The result is a collection of ORPHAcodes and their preferred term having a medical specialty.
+      operationId: query_linearization_orphacodes
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/product7_list_orphacodes'
+        "403":
+          description: Access denied
+        "404":
+          description: Queried disorder not found
+        "500":
+          description: Unknown internal error
+        default:
+          description: Unknown internal error
+      x-openapi-router-controller: api.controllers.rd_medical_specialties
   /orphadata/details/rd-medical-specialties/orphacodes/{orphacode}:
     get:
       tags:
@@ -1452,285 +1498,6 @@ paths:
       x-openapi-router-controller: api.controllers.rd_history
 components:
   schemas:
-    genericAll:
-      type: array
-      items:
-        type: object
-        properties:
-          productName:
-            type: string
-            example: "Rare diseases and alignment with terminologies and databases"
-          productId:
-            type: string
-            example: "product1"
-          languages:
-            type: array
-            items:
-              type: string
-            example:
-              - cs
-              - de
-              - en
-              - es
-              - fr
-              - it
-              - nl
-              - pl
-              - pt
-              - ru
-              - tr
-              - zh
-    generic_product1:
-      type: object
-      properties:
-        productName:
-          type: string
-          example: "Rare diseases and alignment with terminologies and databases"
-        productId:
-          type: string
-          example: "en_product1"
-        description:
-          type: string
-          example: "Description of the product..."
-        language:
-          type: string
-          example: "EN"
-        items:
-          type: array
-          items:
-            $ref: '#/components/schemas/generic_product1_items'
-    generic_product1_items:
-      type: object
-      properties:
-        ORPHAcode:
-          type: integer
-          example: 99927
-        PreferredTerm:
-          type: string
-          example: "Hydatidiform mole"
-        ExternalReference:
-          type: array
-          items:
-            type: object
-            properties:
-              ICD-10List:
-                type: array
-                items:
-                  type: string
-                example:
-                  - "O01.0"
-                  - "O01.1"
-                  - "O01.9"
-              OMIMList:
-                type: array
-                items:
-                  type: string
-                example:
-                  - "231090"
-                  - "614293"
-    generic_product3:
-      type: object
-      properties:
-        productName:
-          type: string
-          example: "Clinical classifications of rare diseases"
-        productId:
-          type: string
-          example: "en_product3"
-        description:
-          type: string
-          example: "Description of the product..."
-        items:
-          type: array
-          items:
-            $ref: '#/components/schemas/generic_product3_items'
-    generic_product3_items:
-      type: object
-      properties:
-        clinicalEntityNb:
-          type: integer
-          example: 1540
-        hchId:
-          type: string
-          example: "233"
-        hchTag:
-          type: string
-          example: "Orphanet classification of rare transplant-related disorders"
-    generic_product4:
-      type: object
-      properties:
-        productName:
-          type: string
-          example: "Phenotypes associated with rare diseases"
-        productId:
-          type: string
-          example: "en_product4"
-        description:
-          type: string
-          example: "Description of the product..."
-        language:
-          type: string
-          example: "EN"
-        items:
-          type: array
-          items:
-            $ref: '#/components/schemas/generic_product4_items'
-    generic_product4_items:
-      type: object
-      properties:
-        ORPHAcode:
-          type: integer
-          example: 79138
-        PreferredTerm:
-          type: string
-          example: "Bickerstaff brainstem encephalitis"
-        associatedHPOs:
-          type: array
-          items:
-            type: object
-            properties:
-              HPOFrequency:
-                type: string
-                example: "Very frequent (99-80%)"
-              HPOId:
-                type: string
-                example: "HP:0000602"
-              HPOTerm:
-                type: string
-                example: "Ophthalmoplegia"
-          example:
-            - HPOFrequency: "Very frequent (99-80%)"
-              HPOId: "HP:0000602"
-              HPOTerm: "Ophthalmoplegia"
-            - HPOFrequency: "Frequent (79-30%)"
-              HPOId: "HP:0000651"
-              HPOTerm: "Diplopia"
-            - ...
-    generic_product6:
-      type: object
-      properties:
-        productName:
-          type: string
-          example: "Genes associated with rare diseases"
-        productId:
-          type: string
-          example: "en_product6"
-        description:
-          type: string
-          example: "Description of the product..."
-        items:
-          type: array
-          items:
-            $ref: '#/components/schemas/generic_product6_items'
-    generic_product6_items:
-      type: object
-      properties:
-        ORPHAcode:
-          type: string
-          example: 99771
-        PreferredTerm:
-          type: string
-          example: "Bifid uvula"
-        associatedGenes:
-          type: array
-          items:
-            type: object
-            properties:
-              HGNC:
-                type: string
-                example: "25839"
-              geneName:
-                type: string
-                example: "grainyhead like transcription factor 3"
-              geneSymbol:
-                type: string
-                example: "GRHL3"
-    generic_product7:
-      type: object
-      properties:
-        productName:
-          type: string
-          example: "Medical specialties of rare diseases"
-        productId:
-          type: string
-          example: "en_product7"
-        description:
-          type: string
-          example: "Description of the product..."
-        language:
-          type: string
-          example: "EN"
-        items:
-          type: array
-          items:
-            $ref: '#/components/schemas/generic_product7_items'
-    generic_product7_items:
-      type: object
-      properties:
-        ORPHAcode:
-          type: string
-          example: 99776
-        PreferredTerm:
-          type: string
-          example: "Mosaic trisomy 9"
-        PreferentialParent:
-          type: array
-          items:
-            type: object
-            properties:
-              ORPHAcode:
-                type: integer
-                example: 93890
-              PreferredTerm:
-                type: string
-                example: "Rare developmental defect during embryogenesis"
-    generic_product9_prev:
-      type: object
-      properties:
-        productName:
-          type: string
-          example: "Epidemiological data associated with rare diseases"
-        productId:
-          type: string
-          example: "en_product9_prev"
-        description:
-          type: string
-          example: "Description of the product..."
-        language:
-          type: string
-          example: "EN"
-        items:
-          type: array
-          items:
-            $ref: '#/components/schemas/generic_product9_items'
-    generic_product9_ages:
-      type: object
-      properties:
-        productName:
-          type: string
-          example: "Natural history of rare diseases"
-        productId:
-          type: string
-          example: "en_product9_ages"
-        description:
-          type: string
-          example: "Description of the product..."
-        language:
-          type: string
-          example: "EN"
-        items:
-          type: array
-          items:
-            $ref: '#/components/schemas/generic_product9_items'
-    generic_product9_items:
-      type: object
-      properties:
-        ORPHAcode:
-          type: integer
-          example: 99772
-        PreferredTerm:
-          type: string
-          example: "Cleft velum"
     product1_list:
       type: array
       items:
